[package]
name = "weaver"
version = "0.1.0"
authors = ["Stephen Weeks <tene@allalone.org>"]

[dependencies]
termion = "*"
liner = "*"
serde = "*"
serde_cbor = "*"
tokio-serde-cbor = "*"
bytes = "*"
futures = "*"
tokio-io = "*"
tokio-core = "*"
tokio-proto = "*"
tokio-service = "*"

[dependencies.tui]
version = "*"
default-features = false
features = ['termion']